# TestTaskMA

./: README.md  cron.py  cron_setup.sh  logging.yaml  pyproject.toml  pytest.ini
app/: main.py  settings.py
app/api/v1/: dependencies.py
app/api/v1/files/: router.py
app/dtos/: dto.py
app/repository/: exceptions.py  models.py  repository.py  session.py
app/service/: cloud_service.py  exceptions.py  file_service.py
app/utils/: decorators.py  mocks.py
tests/: conftest.py  tests.py
